--- a/2-sideGrey/css/styles.css
+++ b/2-sideGrey/css/styles.css
@@ -86,7 +86,20 @@ a {
 }
 
 
-.contact{
-    margin-left:-7px;
 
+.center {
+  margin: auto;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+}
+
+
+.fab:hover{
+    color:black !important;
+    transition: 0.3s;
+}
+
+.p-img{
+    padding:40px;
 }
